[v1.0.0.0] GUI and some changes
- added JavaFX to the project
- changed something in the architecture